tests/ui/frontmatter/infostring-hyphen-leading.rs
--- -toml
//~^ ERROR: invalid infostring for frontmatter
---

// infostrings cannot have leading hyphens

#![feature(frontmatter)]

fn main() {}
